--- a/rancid/lib/iosxr.pm.in
+++ b/rancid/lib/iosxr.pm.in
@@ -566,11 +566,13 @@ sub DirSlotN {
 		# to
 		# 57          -rw-              <no date>              volt_cont
 		# 614788      drwx                                        temp_cont
-		if (/(\s*\d+\s+\S+\s+)(\d+)(\s+)(<no date> )/) {
-		    my($a, $sz, $c, $dt, $rem) = ($1, $2, $3, $4, $');
+		if (/(\s*\d+\s+\S+\s+)(\d+)(\s+)(<no date>)(\s+)/) {
+		    my($a, $sz, $c, $dt, $d, $rem) = ($1, $2, $3, $4, $5, $');
 		    my($szl) = length($sz);
-		    my($fmt) = "%s%-". $szl ."s%s%s%s";
-		    $_ = sprintf($fmt, $a, "", $c, $dt, $rem);
+		    my($fmt) = "%s%-". $szl ."s%s%s%s%s";
+		    $_ = sprintf($fmt, $a, "", $c, $dt, $d, $rem);
+		    ProcessHistory("FLASH","keysort",$rem,"!Flash: $dev: $_");
+		    next;
 		} elsif (/(\s*\d+)(\s+\S+\s+\d+\s+)(\d+\s+\w+\s+\d+\s+\d+:\d+)/) {
 		    # XR >= 6.3; dir disk0:, but harddisk: is diff format.  wtf
 		    # drop fileno size, & date.
@@ -579,11 +581,34 @@ sub DirSlotN {
 		    my($fnl, $dtl) = (length($fn), length($dt));
 		    my($fmt) = "%-". $fnl ."s%s%-". $dtl ."s%s";
 		    $_ = sprintf($fmt, "", $perm, "", $rem);
-		} elsif (/(\s*\d+\s+\S+\s+)(\d+)(\s+)(\w+ \w+\s+\d+ \d+:\d+:\d+ \d+)/) {
-		    my($a, $sz, $c, $dt, $rem) = ($1, $2, $3, $4, $');
-		    my($szl, $dtl) = (length($sz), length($dt));
-		    my($fmt) = "%s%-". $szl ."s%s%-". $dtl ."s%s";
-		    $_ = sprintf($fmt, $a, "", $c, "", $rem);
+		    ProcessHistory("FLASH","keysort",$rem,"!Flash: $dev: $_");
+		    next;
+		} elsif (/(\s*)(\d+)(\s+\S+\s+)(\d+)(\s+)(\w+ \w+\s+\d+ \d+:\d+:\d+ \d+)/) {
+		    my($a, $fn, $b, $sz, $c, $dt, $rem) = ($1, $2, $3, $4, $5,
+							   $6, $');
+		    my($fnl, $szl, $dtl) = (length($fn), length($sz),
+					    length($dt));
+		    my($fmt) = "%s%-". $fnl ."s%s%-". $szl ."s%s%-". $dtl ."s%s";
+		    $_ = sprintf($fmt, $a, "", $b, "", $c, "", $rem);
+		    ProcessHistory("FLASH","keysort",$rem,"!Flash: $dev: $_");
+		    next;
+		}
+	    } else {
+		if (/(\s*\d+\s+\S+\s+)(\d+)(\s+)(<no date>)(\s+)/) {
+		    my($a, $sz, $c, $dt, $d, $rem) = ($1, $2, $3, $4, $5, $');
+		    ProcessHistory("FLASH","keysort",$rem,"!Flash: $dev: $_");
+		    next;
+		} elsif (/(\s*\d+)(\s+\S+\s+\d+\s+)(\d+\s+\w+\s+\d+\s+\d+:\d+)/) {
+		    # XR >= 6.3; dir disk0:, but harddisk: is diff format.  wtf
+		    my($fn, $perm, $dt, $rem) = ($1, $2, $3, $');
+		    ProcessHistory("FLASH","keysort",$rem,"!Flash: $dev: $_");
+		    next;
+		} elsif (/(\s*)(\d+)(\s+\S+\s+)(\d+)(\s+)(\w+ \w+\s+\d+ \d+:\d+:\d+ \d+)/) {
+		    # XR < 6.3 & etc.
+		    my($a, $fn, $b, $sz, $c, $dt, $rem) = ($1, $2, $3, $4, $5,
+							   $6, $');
+		    ProcessHistory("FLASH","keysort",$rem,"!Flash: $dev: $_");
+		    next;
 		}
 	    }
 	}
