--- a/lib/sros.pm.in
+++ b/lib/sros.pm.in
@@ -126,16 +126,10 @@ sub BootLog {
 	/[-=]+$/i && next;
 	/executed [0-9,]+ lines in [0-9.]+ seconds/i && next;
 
-	if (/chassis serial number is \'(\S+)\'/i) {
-	    ProcessHistory("COMMENTS","keysort","B3",
-			   "#Chassis serial number: $1\n");
-	}
 	if (/total memory:\s+(\S+)\s+chassis type:\s+(\S+)\s+card type:\s+(\S+)/i) {
 	    next if ($memoryseen++);
 	    ProcessHistory("COMMENTS","keysort","A1",
 			   "#Total memory: $1\n");
-	    ProcessHistory("COMMENTS","keysort","B1",
-			   "#Chassis type: $2\n");
 	    ProcessHistory("COMMENTS","keysort","B2",
 			   "#Card type: $3\n");
 	}
@@ -186,6 +180,7 @@ sub ShowCardDetail {
 	next if (/^(Config file|BOF) last (saved|modified)\s+:/ && ($filter_osc >= 2));
 
 	/[-=]+$/i && next;
+
 	ProcessHistory("COMMENTS","keysort","E6","# $_");
     }
 }
@@ -227,6 +222,13 @@ sub ShowChassis {
 	/^$/i && next; # extra blank lines tr doesn't remove
 
 	/[-=]+$/i && next;
+
+	/^\s+type\s+:\s+(.*)/i &&
+	    ProcessHistory("COMMENTS","keysort","B1", "#Chassis type: $1\n") &&
+	    next;
+	/^\s+serial number\s+:\s+(.*)/i &&
+	    ProcessHistory("COMMENTS","keysort","B1",
+			   "#Chassis serial number: $1\n") && next;
 	ProcessHistory("COMMENTS","keysort","E1","# $_");
     }
 }
