--- a/rancid/bin/xilogin.in
+++ b/rancid/bin/xilogin.in
@@ -330,7 +330,7 @@ proc source_password_file {file} {
 # returns: 0 on success, 1 on failure, -1 if rsh was used successfully
 proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile } {
     global command spawn_id in_proc do_command do_script passphrase
-    global prompt u_prompt p_prompt sshcmd telnetcmd
+    global platform prompt u_prompt p_prompt sshcmd telnetcmd
     set in_proc 1
     set uprompt_seen 0
 
@@ -568,7 +568,11 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile 
 				  send "K\r"
 				  exp_continue
 				}
-	-re "Last login:"	{
+	-re "Last login:\[^\r\n]*\[\r\n]+"	{
+				  exp_continue
+				}
+	-re "Welcome to ARCOS CLI\[\r\n]+" {
+				  set platform "arcos"
 				  exp_continue
 				}
 	-re "@\[^\r\n]+ $p_prompt"	{
@@ -720,6 +724,7 @@ proc run_commands { prompt command } {
 source_password_file $password_file
 set in_proc 0
 set exitval 0
+set platform "unknown"
 foreach router [lrange $argv $i end] {
     set router [string tolower $router]
     send_user -- "$router\n"
@@ -831,17 +836,25 @@ foreach router [lrange $argv $i end] {
 				}
     }
     if { $do_command || $do_script } {
-	# Hauwei paging
-	send "screen-length 0 temporary\r"
-	expect -re $prompt          {}
-	# Disable paging
-	send "more off\r"
-	expect -re $prompt          {}
-	# Disable command auto-completion on Xirus
-	send "auto-complete off \r"
-	expect {
-	    -re $prompt	{}
-	    -re "\[\n\r]+"	{ exp_continue }
+	if { "$platform" == "arcos" } {
+	    # Arrcus paging
+	    send "screen-length 0\r"
+	    expect -re $prompt          {}
+	    send "screen-width 132\r"
+	    expect -re $prompt          {}
+	} else {
+	    # Hauwei paging
+	    send "screen-length 0 temporary\r"
+	    expect -re $prompt          {}
+	    # Disable paging
+	    send "more off\r"
+	    expect -re $prompt          {}
+	    # Disable command auto-completion on Xirus
+	    send "auto-complete off \r"
+	    expect {
+		-re $prompt	{}
+		-re "\[\n\r]+"	{ exp_continue }
+	    }
 	}
     }
     if { $do_command } {
